@@ -13,7 +13,9 @@ import javax.sql.rowset.serial.SerialBlob;
 import javax.validation.constraints.Email;
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.Pattern;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.sql.Blob;
@@ -48,8 +50,9 @@ public class MemberDto {
         private String realName;
 
         public void setImage() throws IOException, SQLException {
+            InputStream inputStream = new FileInputStream("src/main/resources/pictures/default-image.png");
             // 파일을 바이트 배열로 읽어옴
-            byte[] imageBytes = Files.readAllBytes(Paths.get("src","main","resources","pictures","default-image.png"));
+            byte[] imageBytes = inputStream.readAllBytes();
 
             // 바이트 배열을 Blob으로 변환
             Blob blob = new SerialBlob(imageBytes);
